# MarineFloatingDebrisDetectionSystem

./: .gitignore  README.md  app.py  pyproject.toml
app/: config.py  dependencies.py  main.py  schemas.py
app/api/: detector.py
app/api/endpoints/: detection.py  monitor.py
app/core/: detector.py  image_processor.py  model.py  video_processor.py
app/utils/: image_base64.py  logging_utils.py  visualization.py
data/database/: database.py
frontend/water-garbage-detector/: index.html  package.json  pnpm-lock.yaml
frontend/water-garbage-detector/src/: App.css  App.tsx
tests/: test_core.py
