[project]
name = "marinefloatingdebrisdetectionsystem"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.123.5",
    "ffmpeg-python>=0.2.0",
    "mysql-connector-python>=9.5.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.234",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
